2002-08-28  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (display-message-or-view): Fixed
	embarrassing bug where an unbound variable was being
	used (apparently it previously had the right dynamic binding by
	luck - scary).

	* erl/distel.erl (find_source/1): Now resolves relative paths.

	* elisp/erl-service.el (erl-find-source-under-point): Included
	details of the workings in the docstring. Made a portability
	tweak.

2002-08-27  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl.el (erl-stop-on-error): Setting this variable to
	non-nil stops the scheduler from trapping elisp errors, so you
	can debug them normally. See variable docstring for details.

	* elisp/distel.el (erlang-extended-mode): Fixed up the mode line
	format for erlang-extended-mode. Working around a bug in Emacs 21,
	I think.

2002-08-24  david wallin  <david.wallin@ul.ie>

	* elisp/derl.el (erl-connect): Well well well... who would have
	  guessed that I would have to step in and save the day with some
	  elisp hacking? :-) Anyway, Luke, better take a look at the changes,
	  at least now you can connect to an erl node.

2002-08-23  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (display-message-or-view): Emacs20
	compatibility fix. Also, now only using the echo area for
	single-line messages, even though Emacs21 can handle bigger
	ones. This feels better for process info items, since it's
	confusing to have e.g. one large backtrace in a buffer and then
	another smaller one pop up in the echo area - better to always use
	the buffer.

	* elisp/edb.el (edb-monitor): Monitor buffer now pops up when an
	attached process exits (as well as when an unattached process hits
	a breakpoint).

	* elisp/erl.el (erl-set-name): Added this function that processes
	can call to give themself a name. This name is printed if the
	process crashes - it's handy for debugging. Updated some existing
	processes to use it.

	* elisp/derl.el (erl-connect): When epmd lookup fails, the *derl